--- a/app/src/main/res/layout/activity_album_lig_prov.xml
+++ b/app/src/main/res/layout/activity_album_lig_prov.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".ligProvAlbumActivity">
 
+    <TextView
+        android:id="@+id/textViewNoFotos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Não há fotos capturadas"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lp_album_list"
         android:layout_width="match_parent"
@@ -21,6 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_album_lig_prov">
+
     </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
