--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
     <VideoView
         android:id="@+id/videoViewSplashLogo"
         android:layout_width="0dp"
-        android:layout_height="216dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
