--- a/app/src/main/res/layout/frag_clandestino_form.xml
+++ b/app/src/main/res/layout/frag_clandestino_form.xml
@@ -175,7 +175,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Potência encontrada: 0 W"
+            android:text="Potência encontrada: ---"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
