--- a/app/src/main/res/layout/frag_clandestino_form.xml
+++ b/app/src/main/res/layout/frag_clandestino_form.xml
@@ -142,29 +142,31 @@
                 />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutClandestFatorPotencia"
-            android:layout_width="0dp"
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:text="Fator de Potência:"
+            app:layout_constraintBottom_toBottomOf="@+id/spinnerClandestFatPot"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/spinnerClandestFatPot" />
+
+        <Spinner
+            android:id="@+id/spinnerClandestFatPot"
+            android:layout_width="0dp"
+            android:layout_height="27dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClandestCorrente">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Fator de Potência"
-                android:inputType="numberDecimal"
-                android:maxLength="4"
-                />
-        </android.support.design.widget.TextInputLayout>
-
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClandestCorrente" />
 
         <TextView
             android:id="@+id/textViewPotCalculada"
@@ -180,7 +182,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClandestFatorPotencia" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerClandestFatPot" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutClandestProtecao"
