--- a/app/src/main/res/layout/activity_form_lig_prov.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov.xml
@@ -322,67 +322,67 @@
             tools:text="TextViewFormObservacaoExe" />
 
 
-        <!-- TempoMaxServico -->
-        <TextView
-            android:id="@+id/TextViewLP9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Tempo Max Serviço"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacaoExe"
-            app:layout_constraintStart_toStartOf="@+id/TextViewLP8"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacaoExe" />
+        <!--&lt;!&ndash; TempoMaxServico &ndash;&gt;-->
+        <!--<TextView-->
+            <!--android:id="@+id/TextViewLP9"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--android:text="Tempo Max Serviço"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textStyle="bold"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacaoExe"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/TextViewLP8"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacaoExe" />-->
 
-        <TextView
-            android:id="@+id/TextViewFormTempoMaxServico"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewLP9"
-            app:layout_constraintStart_toStartOf="@+id/TextViewLP9"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewLP9"
-            tools:text="TextViewFormTempoMaxServico" />
+        <!--<TextView-->
+            <!--android:id="@+id/TextViewFormTempoMaxServico"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:textSize="20sp"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/TextViewLP9"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/TextViewLP9"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/TextViewLP9"-->
+            <!--tools:text="TextViewFormTempoMaxServico" />-->
 
 
-        <!-- PercTempoMaximo -->
-        <TextView
-            android:id="@+id/TextViewLP10"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Perc Tempo Maximo"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewFormTempoMaxServico"
-            app:layout_constraintStart_toStartOf="@+id/TextViewLP9"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewFormTempoMaxServico" />
+        <!--&lt;!&ndash; PercTempoMaximo &ndash;&gt;-->
+        <!--<TextView-->
+            <!--android:id="@+id/TextViewLP10"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--android:text="Perc Tempo Maximo"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textStyle="bold"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/TextViewFormTempoMaxServico"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/TextViewLP9"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/TextViewFormTempoMaxServico" />-->
 
-        <TextView
-            android:id="@+id/TextViewFormPercTempoMaximo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewLP10"
-            app:layout_constraintStart_toStartOf="@+id/TextViewLP10"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewLP10"
-            tools:text="TextViewFormPercTempoMaximo" />
+        <!--<TextView-->
+            <!--android:id="@+id/TextViewFormPercTempoMaximo"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:textSize="20sp"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/TextViewLP10"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/TextViewLP10"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/TextViewLP10"-->
+            <!--tools:text="TextViewFormPercTempoMaximo" />-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TextInputObs"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewFormPercTempoMaximo"
-            app:layout_constraintStart_toStartOf="@+id/TextViewLP10"
-            app:layout_constraintTop_toBottomOf="@+id/TextViewFormPercTempoMaximo">
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacaoExe"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP8"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacaoExe">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
